# subgen

./: LICENSE  README.md  pyproject.toml  subgen.py
subgenx/: __main__.py  sorcerer.py  transcribe.py  util.py
